--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation group: 'io.vavr', name: 'vavr', version: '0+'
     implementation group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.5.17'
     implementation 'com.github.blackcrowsys:common-utils:-SNAPSHOT'
+    implementation 'com.github.blackcrowsys:raven:1.0.0'
     // Test dependencies
     testImplementation group: 'org.junit', name: 'junit-bom', version: '5.+'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.+'
@@ -45,4 +46,5 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.+'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.+'
     testImplementation group: "org.mockito", name: "mockito-core", version: "2.+"
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '5.+'
 }
